compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__deprecated_type_used_as_arg.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\n@deprecated(\"Don't use this!\")\npub type Cat {\n    Cat(name: String)\n}\n\npub fn cat_name(cat: Cat) {\n  cat.name\n}\n        "
---

warning: Deprecated value used
  ┌─ /src/warning/wrn.gleam:7:22
  │
7 │ pub fn cat_name(cat: Cat) {
  │                      ^^^ This value has been deprecated

It was deprecated with this message: Don't use this!

