compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__deprecated_type_used_in_alias.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\n@deprecated(\"Don't use this!\")\npub type Cat {\n    Cat(name: String)\n}\n\npub type Dog = Cat\n\npub fn b() {\n  let c = Dog(\"Bob\")\n}\n        "
---

warning: Deprecated value used
  ┌─ /src/warning/wrn.gleam:7:16
  │
7 │ pub type Dog = Cat
  │                ^^^ This value has been deprecated

It was deprecated with this message: Don't use this!

