compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__deprecated_value_in_use_with_fn_literal_rhs_warns_once.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\n@deprecated(\"Don't use this!\")\npub fn wibble() {\n  Nil\n}\n\npub fn main() {\n  use <- fn(f) { f() }\n  wibble()\n}\n"
---
----- SOURCE CODE

@deprecated("Don't use this!")
pub fn wibble() {
  Nil
}

pub fn main() {
  use <- fn(f) { f() }
  wibble()
}


----- WARNING
warning: Immediately called anonymous function
  ┌─ /src/warning/wrn.gleam:8:3
  │  
8 │ ╭   use <- fn(f) { f() }
9 │ │   wibble()
  │ ╰──────────^ This anonymous function is immediately called

This anonymous function is immediately called. It can be replaced with a
block expression.

Hint: Use a block expression with `let` bindings instead, for example: `{
let a = 1; let b = 2; a + b }`

warning: Deprecated value used
  ┌─ /src/warning/wrn.gleam:9:3
  │
9 │   wibble()
  │   ^^^^^^ This value has been deprecated

It was deprecated with this message: Don't use this!
