compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__different_records_0_redundant_comparison.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\npub type Either {\n  Left\n  Right\n}\n\npub fn main() -> Bool {\n  Left == Right\n}\n"
---
----- SOURCE CODE

pub type Either {
  Left
  Right
}

pub fn main() -> Bool {
  Left == Right
}


----- WARNING
warning: Redundant comparison
  ┌─ /src/warning/wrn.gleam:8:3
  │
8 │   Left == Right
  │   ^^^^^^^^^^^^^ This is always `False`

This comparison is redundant since it always fails.
