compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__doesnt_warn_twice_for_unreachable_code_if_has_already_warned_in_a_block_1.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\n        pub fn wibble(_) { 1 }\n        pub fn main() {\n            panic\n            let _ = \"unreachable\" // warning here\n            panic\n            \"no warning here!\"\n        }\n        "
---
warning: Unreachable code
  ┌─ /src/warning/wrn.gleam:5:13
  │
5 │             let _ = "unreachable" // warning here
  │             ^^^^^^^^^^^^^^^^^^^^^

This code is unreachable because it comes after a `panic`.
