compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__double_unary-2.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\n        pub fn main() { \n            let x = 7\n            let _ = --x \n        }\n        "
---

warning: Unnecessary double unary expression
  ┌─ /src/warning/wrn.gleam:4:21
  │
4 │             let _ = --x 
  │                     ^^^ Double unary expression

Hint: If you're trying to type cast, look for a `from_<type>` function in the target type's module

