compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__double_unary.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "pub fn main() { let _ = --7 }"
---

warning: Unnecessary double unary expression
  ┌─ /src/warning/wrn.gleam:1:25
  │
1 │ pub fn main() { let _ = --7 }
  │                         ^^^ Double unary expression

Hint: If you're trying to type cast, look for a `from_<type>` function in the target type's module

